--- a/Web/Views/Shared/NewTheme_MainMenu.cshtml
+++ b/Web/Views/Shared/NewTheme_MainMenu.cshtml
@@ -228,7 +228,16 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.Translate2(PAGE_NAME, "FDP Commodity Receipt")<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                @Html.RegionalOperationMenuItem(@Html.Translate("FDP Commodity Receipt"), @Url.Action("Index", "DeliveryReconcile", new { Area = "Logistics", regionID = ViewBag.RegionID }), RegionalConstants.Operation.View_Distribution_Entry)
+                            </li>
 
+
+                        </ul>
+                    </li>
                     @*</ul>
                         </div>*@
                 }
