H.1.3.2 Fixed reverting a closed RegionalRequest and Uncommiting a ReliefRequisition

--- a/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
+++ b/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
@@ -304,6 +304,7 @@
     function promot_workflow(BusinessProcessID, nextstate, actionname, TransportOrderID) {
         $('#ParentBusinessProcessID').val(BusinessProcessID);
         $('#stateID').val(nextstate);
+        $('#actionname').val(actionname);
         $('#modalPromotionLabel').html(actionname);
         $('#TransportOrderID').val(TransportOrderID);
         $('#modalPromotion').modal();
