--- a/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Request/Details.cshtml
@@ -190,7 +190,8 @@
                         {
                             <li class="edit_button"><a href="javascript:promot_workflow(@modelRequest.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@modelRequest.RegionalRequestID)" title="@actions.Name">@actions.Name</a></li>
                         }
-                        if (UserAccountHelper.RegionalOperationCheck(RegionalConstants.Operation.Add_new_needs_assessment) && actions.Name == "Reject")
+                        if ((UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Reverse_Request) || UserAccountHelper.PsnpOperationCheck(PsnpConstants.Operation.Reverse_Request)) && actions.Name == "Revert")
+
                         {
                             <li class="edit_button"><a href="javascript:promot_workflow(@modelRequest.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@modelRequest.RegionalRequestID)" title="@actions.Name">@actions.Name</a></li>
                         }
@@ -305,7 +306,7 @@
                     {
                         @*<li><a class="btn green-haze-stripe" href="@Url.Action("RevertRequestStatus", "Request", new { Area = "EarlyWarning", id = modelRequest.RegionalRequestID })">Revert Status</a></li>*@
 
-                    switch (modelRequest.Program)
+                    @*switch (modelRequest.Program)
                     {
                         case "Relief":
                             <li>
@@ -323,7 +324,7 @@
                                 </a>
                             </li>
                                 break;
-                        }
+                        }*@
                     }
                     else if (modelRequest.Status == "Rejected")
                     {
