--- a/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/Index.cshtml
@@ -130,6 +130,7 @@
         console.log("actionname: " + actionname);
         $('#ParentBusinessProcessID').val(BusinessProcessID);
         $('#stateID').val(nextstate);
+        $('#actionname').val(actionname);
         $('#modalPromotionLabel').html(actionname);
         $('#modalPromotion').modal();
     }
