--- a/Web/Views/Shared/_promotWorkflow.cshtml
+++ b/Web/Views/Shared/_promotWorkflow.cshtml
@@ -24,7 +24,7 @@
                     <input type="hidden" name="ParentBusinessProcessID" id="ParentBusinessProcessID" class="input-xlarge" value="" />
                     <input type="hidden" id="stateID" name="StateID" class="input-xlarge " />
                     <input type="hidden" id="TransporterChequeID" name="TransporterChequeID" class="input-xlarge " />
-
+                    <input type="hidden" id="actionname" name="actionname" class="input-xlarge" value=""/>
                     <div class="form-group" style="display: none;">
                         <label class="col-md-3 control-label">@Html.Translate("Date")</label>
                         <div class="col-md-4">
