--- a/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
@@ -21,6 +21,21 @@
     }
 </style>
 
+<style>
+    .busy {
+        cursor: wait !important;
+    }
+</style>
+<script>
+        function loadWaitModal() {
+            $("body").addClass("busy");
+        }
+        function unloadWaitModal() {
+            $("body").removeClass("busy");
+        }
+</script>
+
+
 @{
     int allocationType = ViewBag.CommoditySourceType;
     string quanityColumnHeader = "MT";
@@ -32,7 +47,7 @@
         quanityColumnHeader = "QTL";
         toqt = 10;
     }
-    
+
 
 }
 @(Html.Kendo().Grid<ReceiptAllocationViewModel>()
@@ -50,60 +65,43 @@
         ).Events(events => events.DataBound("dataBound"))
     .Columns(columns =>
     {
-        columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
-        columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
-        columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
-        //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
-        columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
-        //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
-        columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
-        columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
-    "# if (RemainingBalanceInMT < 0) { #" +
-            "#: RemainingBalanceInMT * -1 #" + "  <span style='font-weight: bold;'>  (over received) </span>" +
-            "# } else { #" +
-            "#: RemainingBalanceInMT #" +
-            "# } #"
+    columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
+    columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
+    columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
+    //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
+    columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
+    //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+    columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
+    columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
+"# if (RemainingBalanceInMT < 0) { #" +
+        "#: RemainingBalanceInMT * -1 #" + "  <span style='font-weight: bold;'>  (over received) </span>" +
+        "# } else { #" +
+        "#: RemainingBalanceInMT #" +
+        "# } #"
+        );
+    //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
+    if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation))
+    {
+        columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
+                                                                               @Url.Action("Create", "ReceiveNew", new { @ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType }) +
+                                                                               "'>Recieve  </a> &nbsp; " +
+                                                                               "<a  class='close_#=IsClosed#' href='javascript:ClosePlanByID(\"#=ReceiptAllocationID#\"," + allocationType + ")'>Close</a>"
             );
-        //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
-        if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation))
-        {
-            columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
-                                                                                   @Url.Action("Create", "ReceiveNew", new { @ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType }) +
-                                                                                   "'>Recieve  </a> &nbsp; " +
-                                                                                   "<a  class='close_#=IsClosed#' href='javascript:ClosePlanByID(\"#=ReceiptAllocationID#\"," + allocationType + ")'>Close</a>"
-                );
-        }
+    }
 
-        columns.Template(
-            @<text>
-               
-                <div class='btn-group'>
-                    <button type='button' id='workflow-#=RequisitionId#' class='btn btn-default dropdown-toggle btn-xs green-stripe' data-toggle='dropdown'>
-                        <i class='fa fa-ellipsis-horizontal'>
-                        </i>Workflow<i class='fa fa-angle-down'></i>
-                    </button>
+    columns.Bound(dis => dis.BusinessProcessID).Title("History").ClientTemplate("<a href='javascript:workflow_history(\"#=BusinessProcessID#\")'>History</a>");
 
-                    <ul class='dropdown-menu pull-right' style='overflow: visible;'>
-
-                        <li class="divider"></li>
-                        <li class='edit_button'>
-                            <a href="javascript:workflow_history(@item.BusinessProcessID)"> History </a>
-                        </li>
-                    </ul>
-                </div>
-            </text>
-                              ).Title(@Html.Translate("Action")).Width("200px");
     })
 
 )
 
 <script id="template_receive" type="text/kendo-tmpl">
-    
+
     @(Html.Kendo().Grid<ReceiveViewModelDto>()
         .Name("Receives_#=ReceiptAllocationID#")
         .Columns(columns =>
         {
-            columns.Bound(d => d.ReceiptDatePref).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid"});
+            columns.Bound(d => d.ReceiptDatePref).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
             columns.Bound(d => d.GRN).ClientTemplate("<a href='" + @Url.Action("Create", "ReceiveNew", new { @receiptAllocationId = "\\#=ReceiveID\\#", @GRN = "\\#=GRN\\#" }) + "'>\\#:GRN\\#</a> &nbsp; ");
             columns.Bound(b => b.ReceivedByStoreMan);
         })
@@ -118,23 +116,23 @@
     .Sortable()
     .ClientDetailTemplateId("template_receive_detail")
     .ToClientTemplate())
-                
+
 </script>
 
 <script id="template_receive_detail" type="text/kendo-tmpl">
-    
-                    @(Html.Kendo().Grid<ReceiveDetailViewModelDto>()
+
+    @(Html.Kendo().Grid<ReceiveDetailViewModelDto>()
                          .Name("ReceiveDetails_#=ReceiveID#")
                         .Columns(columns =>
                         {
                             columns.Bound(com => com.CommodityName).Title(Html.Translate("Commodity"));
                             columns.Bound(com => com.UnitName).Title(Html.Translate("Unit"));
                             columns.Bound(com => com.SentQuantityInUnitFormatted).Title(Html.Translate("Sent Qty (Unit)")).HtmlAttributes(new { align = "right" });
-                            columns.Bound(com => com.ReceivedQuantityInUnitFormatted).Title("Received Qty (Unit)").HtmlAttributes(new { align = "right"});
+                            columns.Bound(com => com.ReceivedQuantityInUnitFormatted).Title("Received Qty (Unit)").HtmlAttributes(new { align = "right" });
                             //columns.Bound(com => com.SentQuantityInMT).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(SentQuantityInMT)#");
-                            columns.Bound(com => com.SentQuantityInMTFormatted).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new {align = "right", @class = "cats_amt_in_uom"});
+                            columns.Bound(com => com.SentQuantityInMTFormatted).Title(Html.Translate("Sent Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" });
                             //columns.Bound(com => com.ReceivedQuantityInMT).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
-                            columns.Bound(com => com.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new {align = "right", @class = "cats_amt_in_uom"});
+                            columns.Bound(com => com.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received Qty " + quanityColumnHeader)).HtmlAttributes(new { align = "right", @class = "cats_amt_in_uom" });
 
                         })
                         .DataSource(dataSource => dataSource
@@ -147,39 +145,62 @@
                         .Scrollable()
                         .Sortable()
                         .ToClientTemplate())
-                
+
 </script>
+
+<div id='dialogDiv' class='modal fade'>
+    <div id='dialogContent'></div>
+</div>
+
+
+<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 id="modalHistoryLabel">Activity History</h4>
+            </div>
+            <div class="modal-body" id="modalHistoryBody">History</div>
+        </div>
+    </div>
+</div>
+
 <script>
-    
+
     function numberWithCommas(x) {
         var parts = x.toFixed(3).toString().split(".");
         parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         return parts.join(".");
     }
-   
+
     // end of function CurrencyFormatted()
 
 
 
     function adjustuom(amt) {
 
-        
+
         if ('@quanityColumnHeader' == "QTL")
 
 
-            return numberWithCommas(amt*10);
+            return numberWithCommas(amt * 10);
         else {
             return numberWithCommas(amt);
 
         }
     }
-    
-    function grnInfo() {return { grn : document.getElementById('FilterGRN').value }}
+
+    function grnInfo() { return { grn: document.getElementById('FilterGRN').value } }
 
     function dataBound() {
         if (document.getElementById('FilterGRN').value !== "") this.expandRow(this.tbody.find("tr.k-master-row").first());
     }
+  
+</script>
 
+<script type="text/javascript">
+
+    var history_link = "@Url.Action("History", "BusinessProcess", new {Area = "WorkflowManager", id = "0"})";
     function workflow_history(BusinessProcessID) {
         $('#modalHistory').modal();
         $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
@@ -188,5 +209,6 @@
                 $("#modalHistoryBody").html(data);
             }
         );
-    }
+    }   
+
 </script>
