--- a/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
@@ -27,12 +27,12 @@
     }
 </style>
 <script>
-        function loadWaitModal() {
-            $("body").addClass("busy");
-        }
-        function unloadWaitModal() {
-            $("body").removeClass("busy");
-        }
+    function loadWaitModal() {
+        $("body").addClass("busy");
+    }
+    function unloadWaitModal() {
+        $("body").removeClass("busy");
+    }
 </script>
 
 
@@ -65,32 +65,32 @@
         ).Events(events => events.DataBound("dataBound"))
     .Columns(columns =>
     {
-    columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
-    columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
-    columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
-    //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
-    columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
-    //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
-    columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
-    columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
-"# if (RemainingBalanceInMT < 0) { #" +
-        "#: RemainingBalanceInMT * -1 #" + "  <span style='font-weight: bold;'>  (over received) </span>" +
-        "# } else { #" +
-        "#: RemainingBalanceInMT #" +
-        "# } #"
-        );
-    //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
-    if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation))
-    {
-        columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
-                                                                               @Url.Action("Create", "ReceiveNew", new { @ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType }) +
-                                                                               "'>Recieve  </a> &nbsp; " +
-                                                                               "<a  class='close_#=IsClosed#' href='javascript:ClosePlanByID(\"#=ReceiptAllocationID#\"," + allocationType + ")'>Close</a>"
+        columns.Bound(dis => dis.CommodityName).Title(Html.Translate("Commodity")).Filterable(true);
+        columns.Bound(dis => dis.SINumber).Title(Html.Translate("SINumber")).Filterable(true);
+        columns.Bound(dis => dis.ProjectNumber).Title(Html.Translate("Project Code")).Filterable(true);
+        //columns.Bound(dis => dis.QuantityInMT).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(QuantityInMT)#");
+        columns.Bound(dis => dis.QuantityInMTFormatted).Title(Html.Translate("Allocated In " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
+        //columns.Bound(dis => dis.ReceivedQuantityInMT).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(ReceivedQuantityInMT)#");
+        columns.Bound(dis => dis.ReceivedQuantityInMTFormatted).Title(Html.Translate("Received in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" });
+        columns.Bound(dis => dis.RemainingBalanceInMT).ClientTemplate(
+    "# if (RemainingBalanceInMT < 0) { #" +
+            "#: RemainingBalanceInMT * -1 #" + "  <span style='font-weight: bold;'>  (over received) </span>" +
+            "# } else { #" +
+            "#: RemainingBalanceInMT #" +
+            "# } #"
             );
-    }
+        //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
+        if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation))
+        {
+            columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
+                                                                                   @Url.Action("Create", "ReceiveNew", new { @ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType }) +
+                                                                                   "'>Recieve  </a> &nbsp; " +
+                                                                                   "<a  class='close_#=IsClosed#' href='javascript:ClosePlanByID(\"#=ReceiptAllocationID#\"," + allocationType + ")'>Close</a>"
+                );
+        }
 
-    columns.Bound(dis => dis.BusinessProcessID).Title("History").ClientTemplate("<a href='javascript:workflow_history(\"#=BusinessProcessID#\")'>History</a>");
-
+        columns.Bound(dis => dis.BusinessProcessID).Title("History").ClientTemplate("<a href='javascript:workflow_history_new(\"#=BusinessProcessID#\")'>History</a>");
+        columns.Bound(dis => dis.BusinessProcessID).Title("BusinessProcessID");
     })
 
 )
@@ -153,7 +153,7 @@
 </div>
 
 
-<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+@*<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -163,7 +163,9 @@
             <div class="modal-body" id="modalHistoryBody">History</div>
         </div>
     </div>
-</div>
+</div>*@
+
+
 
 <script>
 
@@ -195,20 +197,6 @@
     function dataBound() {
         if (document.getElementById('FilterGRN').value !== "") this.expandRow(this.tbody.find("tr.k-master-row").first());
     }
-  
-</script>
-
-<script type="text/javascript">
-
-    var history_link = "@Url.Action("History", "BusinessProcess", new {Area = "WorkflowManager", id = "0"})";
-    function workflow_history(BusinessProcessID) {
-        $('#modalHistory').modal();
-        $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
-        $.post(history_link + BusinessProcessID, {},
-            function (data) {
-                $("#modalHistoryBody").html(data);
-            }
-        );
-    }   
 
 </script>
+
