--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -642,6 +642,8 @@
             </div>
         </div>
 
+@Html.Partial("DataActivityIndicator")
+
 
         <div>
             <div class="row" style="border-bottom-width: thin; border-bottom-color: #666; border-bottom-style: inset; margin-top: 5px">
@@ -650,7 +652,7 @@
                 </div>
                 <div class="pull-right">
                     <div class="btn-group">
-                        <button id="AllocationChangeHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+                        <button id = "AllocationChangeHeader" type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-arrow-up"></i>
                             <i class="icon-arrow-down"></i>
                         </button>
@@ -658,7 +660,7 @@
                     </div>
                 </div>
             </div>
-            <div id="AllocationChangeContent" class="row">
+            <div id = "AllocationChangeContent" class="row">
                 <div>&nbsp;</div>
                 <div class="span11">
                     <div class="portlet">
@@ -673,7 +675,7 @@
 
                         <div class="portlet-content">
                             <th class="table-responsive">
-                                <table id="" class="table table-striped table-checkable">
+                                <table id = "" class="table table-striped table-checkable">
                                     <thead>
                                         <tr>
                                             <th class="hidden-xs">Number</th>
