Addition of Data Indicator Partial

--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -85,6 +85,10 @@
         </div>
         <hr />
     </div>
+<div>
+
+    @Html.Partial("DataActivityIndicator")
+</div>
 
     <div ng-controller="RegionalDashboardController" class="container">
 
