--- a/Web/Views/Shared/DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/DataActivityIndicator.cshtml
@@ -23,19 +23,17 @@
     </style>
 
 
-    <script src="~/Scripts/jquery-1.9.1.js"></script>
-    <script src="~/Content/assetss/global/plugins/bootstrap/js/bootstrap.min.js"></script>
+    @*<script src="~/Scripts/jquery-1.9.1.js"></script>
+    <script src="~/Content/assetss/global/plugins/bootstrap/js/bootstrap.min.js"></script>*@
     <script src="~/Scripts/Bootstrap/bootstrap-multiselect.js"></script>
 
     <script src="~/Scripts/angular/angular.js"></script>
-
-
-    <link href="~/Scripts/Bootstrap/bootstrap-multiselect.css" rel="stylesheet" />
+ 
   
-      <link href="~/Scripts/Bootstrap/awesome-bootstrap-checkbox.css" rel="stylesheet" />
-    <link href="~/Scripts/Bootstrap/bootstrap-multiselect.css" rel="stylesheet" />
-    <link href="~/Scripts/Bootstrap/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Content/assets/css/bootstrap.min.css" rel="stylesheet" />
+      @*<link href="~/Scripts/Bootstrap/awesome-bootstrap-checkbox.css" rel="stylesheet" />*@
+    @*<link href="~/Scripts/Bootstrap/bootstrap-multiselect.css" rel="stylesheet" />*@
+    @*<link href="~/Scripts/Bootstrap/font-awesome.min.css" rel="stylesheet" />*@
+    @*<link href="~/Content/assets/css/bootstrap.min.css" rel="stylesheet" />*@
 
 
     @*------------Development proj fonts-----*@ 
@@ -56,7 +54,7 @@
 
 <body ng-controller="WorkflowActController" ng-app="workflowActApp">
 
-    <div class="container">
+    <div class="container ">
 
 
         <div class="row dataEntryIndicatorBody">
