--- a/Web/Areas/EarlyWarning/Views/DonorCoverage/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/DonorCoverage/Index.cshtml
@@ -6,31 +6,32 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Donors");
+    ViewBag.PageTitleDescription = "";
 }
 
-@section Title
-{
-Donors
-}
-@section PageTitle
-{
-     <h1 class="hdr-blck big ">  List Of Donors Coverage</h1>
-   
-}
-<div class="box box-primary">
-    <div class="col-md-12 box-body" style="display: block;">
-        <div class="row">
-            <div class="mrgn5-v text-right col-md-12">
-                @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Add_new_donor_coverage))
-                {
-                    <a data-buttontype="btn_new_record" class="btn btn-success btn-sm " href="@Url.Action("Create", "DonorCoverage")"><span class="fa fa-plus"></span>New Donor</a>
-                }
-                
-            </div>
+
+<div class="portlet light bordered ">
+    <div class="portlet-title">
+        <div class="caption font-green-sharp">
+            <i class="icon-list font-green-sharp"></i>
+            <span class="caption-subject bold uppercase"> @Html.Translate("List Of Donors Coverage")</span>
         </div>
-        <div class="table-responsive">
+        <div class="tools">
+            <a href="#" class="collapse" data-original-title="" title=""></a>
+        </div>
+        <div class="actions">
+            @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Add_new_donor_coverage))
+            {
+                <a data-buttontype="btn_new_record" class="btn green" href="@Url.Action("Create", "DonorCoverage")"><span class="fa fa-plus"></span> @Html.Translate("New Donor")</a>
+            }
+            <a class="btn btn-icon-only btn-default fullscreen"></a>
+        </div>
+    </div>
 
+    <div class="portlet-body">
+        <div class="table-responsive">
             @(Html.Kendo().Grid<HRDDonorCoverageViewModel>().Name("grid")
                 .Columns(columns =>
                 {
@@ -51,12 +52,9 @@ Donors
             .Read(read => read.Action("DonorCoverage_Read", "DonorCoverage"))
 
             )
-      )
-
+            )
         </div>
-
-       
     </div>
-
 </div>
+
 
