--- a/Web/Areas/EarlyWarning/Views/Contribution/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Contribution/Index.cshtml
@@ -4,70 +4,64 @@
 @using Kendo.Mvc.UI
 @model List<Cats.Models.Contribution>
 
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
-}
-
-@section Title
-{
-Donors
-}
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">List of Donor Contributions</h1>
-
-}
-<div class="row">
-    @Html.Partial("_ContributionLeftBar");
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="col-md-12 box-body" style="display: block;">
-                <div class="row">
-                    <div class="mrgn5-v text-right col-md-12">
+    @{
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+        ViewBag.PageTitle = Html.Translate("Donors");
+        ViewBag.PageTitleDescription = "";
+    }
+    <div class="row">
+        <div class="col-md-2">
+            @Html.Partial("_ContributionLeftBar");
+        </div>
+        <div class="col-md-10">
+            <div class="portlet light bordered ">
+                <div class="portlet-title">
+                    <div class="caption font-green-sharp">
+                        <i class="icon-list font-green-sharp"></i>
+                        <span class="caption-subject bold uppercase"> @Html.Translate("List of Donor Contributions")</span>
+                    </div>
+                    <div class="tools">
+                        <a href="#" class="collapse" data-original-title="" title=""></a>
+                    </div>
+                    <div class="actions">
                         @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Add_new_contribution))
-                        {
+            {
                             <a data-buttontype="btn_new_record" class="btn btn-success btn-sm " href="@Url.Action("Create", "Contribution")"><span class="fa fa-plus"></span> New Contribution</a>
                         }
+                        <a class="btn btn-icon-only btn-default fullscreen" href="javascript:;"></a>
                     </div>
                 </div>
-                <div class="table-responsive">
-
-                    @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.ContributionViewModel>()
-    .Name("grid")
-    .Columns(columns =>
-        {
-            columns.Bound(p => p.Donor).ClientTemplate("# if (ContributionType == 'In-Kind') { #" +
-            "<a href='" + Url.Action("InkindDetails", "Contribution", new { id = "#=ContributionID#" }) + " '>#=Donor#</a>  " +
-            "# } else { #" +
-                   "<a href='" + Url.Action("Details", "Contribution", new { id = "#=ContributionID#" }) + " '>#=Donor#</a>  " +
-                "# } #");
-            columns.Bound(p => p.HRD);
-            columns.Bound(p => p.ContributionType);
-            columns.Bound(p => p.AmountInMt).HtmlAttributes(new { align = "right" });
-            columns.Bound(p => p.AmountInQuintal).HtmlAttributes(new { align = "right" });
-            columns.Bound(p => p.AmountInKg).HtmlAttributes(new { align = "right" });
-        })
-    .Pageable()
-    .Sortable()
-    .Filterable()
-    .DataSource(dataSource => dataSource
-          .Ajax()
-          .PageSize(8)
-            .Model(model => model.Id(p => p.ContributionID))
-           .Read(read => read.Action("Contribution_Read", "Contribution"))
-
-     )
-
-      )
+                <div class="portlet-body">
+                    <div class="table-responsive">
+                        @(Html.Kendo().Grid<Cats.Areas.EarlyWarning.Models.ContributionViewModel>()
+                .Name("grid")
+                .Columns(columns =>
+                    {
+                        columns.Bound(p => p.Donor).ClientTemplate("# if (ContributionType == 'In-Kind') { #" +
+                        "<a href='" + Url.Action("InkindDetails", "Contribution", new { id = "#=ContributionID#" }) + " '>#=Donor#</a>  " +
+                        "# } else { #" +
+                               "<a href='" + Url.Action("Details", "Contribution", new { id = "#=ContributionID#" }) + " '>#=Donor#</a>  " +
+                            "# } #");
+                        columns.Bound(p => p.HRD);
+                        columns.Bound(p => p.ContributionType);
+                        columns.Bound(p => p.AmountInMt).HtmlAttributes(new { align = "right" });
+                        columns.Bound(p => p.AmountInQuintal).HtmlAttributes(new { align = "right" });
+                        columns.Bound(p => p.AmountInKg).HtmlAttributes(new { align = "right" });
+                    })
+                .Pageable()
+                .Sortable()
+                .Filterable()
+                .DataSource(dataSource => dataSource
+                      .Ajax()
+                      .PageSize(8)
+                        .Model(model => model.Id(p => p.ContributionID))
+                       .Read(read => read.Action("Contribution_Read", "Contribution"))
+                 )
+                        )
+                    </div>
                 </div>
             </div>
 
-
         </div>
     </div>
-
-</div>
-
-
-
